[package]
authors = ["John Mitchell"]
edition = "2018"
name = "bevy_tiled"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13.0"
bevy = {git = "https://github.com/bevyengine/bevy//", rev = "01c4dd96cfaed4d4b505365d3a45fd66bc01f430", default-features = false, features = ["bevy_winit", "render", "bevy_gltf", "png"]}
bevy_type_registry = {git = "https://github.com/bevyengine/bevy//", rev = "01c4dd96cfaed4d4b505365d3a45fd66bc01f430"}
byteorder = "1.3.4"
glam = "0.10.2"
quick-xml = "0.20.0"
futures = "0.3.5"
#tiled = "0.9"
# tiled = { git = "https://github.com/mattyhall/rs-tiled" }
