[package]
authors = ["John Mitchell"]
edition = "2018"
name = "bevy_tiled"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13.0"
bevy = {git = "https://github.com/bevyengine/bevy//", rev = "1398d7833007e85198cfd35d5fabc70b51b4db31", default-features = false, features = ["bevy_winit", "render", "bevy_gltf", "png"]}
bevy_reflect = {git = "https://github.com/bevyengine/bevy//", rev = "1398d7833007e85198cfd35d5fabc70b51b4db31"}
byteorder = "1.3.4"
futures = "0.3.5"
glam = "0.10.2"
quick-xml = "0.20.0"
#tiled = "0.9"
# tiled = { git = "https://github.com/mattyhall/rs-tiled" }
